@startuml bank

class Kunde{
    navn: str
    kontoer: dict<Konto>
    åpne_konto(type: str, beløp: float): Konto
    oversikt(): None
}

class Konto{
    kontonr: int
    saldo: float
    innskudd(beløp: float): None
    uttak(beløp: float): bool
    __str__(): str
}

class Sparekonto{
    int maks_uttak
    int antall_uttak
    uttak(float beløp): bool
    __str__(): str
}


Kunde o-- Konto
Konto <|-- Sparekonto

@enduml
